@@ -1,26 +1,19 @@
-package Group6.BankingApp.Configuration;
+package Group6.BankingApp;
 
 import Group6.BankingApp.DAL.AccountRepository;
 import Group6.BankingApp.DAL.DebitCardRepository;
 import Group6.BankingApp.DAL.UserRepository;
 import Group6.BankingApp.DAL.TransactionRepository;
-import Group6.BankingApp.Models.Account;
-import Group6.BankingApp.Models.Transaction;
-import Group6.BankingApp.Models.DebitCard;
-import Group6.BankingApp.Models.Role;
-import Group6.BankingApp.Models.User;
-import Group6.BankingApp.Models.dto.UserDTO2;
+import Group6.BankingApp.Models.*;
+import Group6.BankingApp.Models.Customer;
 import Group6.BankingApp.Services.AccountService;
-import jakarta.persistence.Entity;
 
-import org.hibernate.dialect.function.TransactSQLStrFunction;
+import Group6.BankingApp.Services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Component;
 
-import java.lang.reflect.Array;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
@@ -45,58 +38,47 @@ public class MyApplicationRunner implements ApplicationRunner {
     @Override
     public void run(ApplicationArguments args) throws Exception {
 
-        List<User> users=
-                Arrays.asList(new User("InHolland", "Bank", "inholland@gmail.com", "123456", "123456789", Role.EMPLOYEE,true),
-                        new User("John", "Doe", "john.doe@gmail.com", "123456", "123456789", Role.EMPLOYEE,true),
-                        new User("Emily", "Doe", "emily.doe@gmail.com", "123456", "123456789", Role.CUSTOMER,false),
-                        new User("Adam", "Adey", "ad.ad@gmail.com", "123456", "123456789", Role.CUSTOMER,false)
-                        );
+        // Create and save Customers
+        Customer customer1 = new Customer();
+        customer1.setFirstName("John");
+        customer1.setLastName("Doe");
+        customer1.setEmail("john.doe@gmail.com");
+        customer1.setPassword("123456");
+        customer1.setPhoneNumber("0612345678");
+        customer1.setHasAccount(true);
+        customer1.setRoles(List.of(Role.ROLE_USER));
 
-        userRepository.saveAll(users);
+        Customer customer2 = new Customer();
+        customer2.setFirstName("Jane");
+        customer2.setLastName("Smith");
+        customer2.setEmail("jane.smith@gmail.com");
+        customer2.setPassword("123456");
+        customer2.setPhoneNumber("0612345678");
+        customer2.setHasAccount(true);
+        customer2.setRoles(List.of(Role.ROLE_USER));
 
+        List<Customer> customers = Arrays.asList(customer1, customer2);
+        userRepository.saveAll(customers);
 
         // Create and save DebitCards
-        DebitCard bankDebitCard = new DebitCard("1111222233334444",
-                LocalDate.now().plusYears(3),
-                "123",
-                users.get(0).getFirstName() + " "  + users.get(0).getLastName(),
-                true,
-                accountService.generateCardUUID());
-        debitCardRepository.save(bankDebitCard);
-        DebitCard debitCard1 = new DebitCard("5555666677778888",
-                LocalDate.now().plusYears(2),
-                "456",
-                users.get(1).getFirstName() + " "  + users.get(1).getLastName(),
-                true,
-                accountService.generateCardUUID());
+        DebitCard debitCard1 = new DebitCard("1111222233334444", LocalDate.now().plusYears(3), "123", "John Doe", true, "UUID1");
         debitCardRepository.save(debitCard1);
-        DebitCard debitCard2 = new DebitCard("5555666677778888",
-                LocalDate.now().plusYears(2),
-                "456",
-                users.get(2).getFirstName() + " "  + users.get(2).getLastName(),
-                true,
-                accountService.generateCardUUID());
+        DebitCard debitCard2 = new DebitCard("5555666677778888", LocalDate.now().plusYears(2), "456", "Jane Smith", true, "UUID2");
         debitCardRepository.save(debitCard2);
-        DebitCard debitCard3 = new DebitCard("6666777788889999",
-                LocalDate.now().plusYears(10),
-                "789",
-                users.get(3).getFirstName() + " "  + users.get(3).getLastName(),
-                true,
-                accountService.generateCardUUID());
-        debitCardRepository.save(debitCard3);
 
         // Create and save Accounts
-        Account inHollandAccount = new Account("NL01INHO0000000001","Current", accountService.generateCardUUID(), "1234", 1000000.0, 1000000.0, 1000000, true, bankDebitCard);
-        inHollandAccount.setUser(users.get(0));
-        accountRepository.save(inHollandAccount);
         Account account1 = new Account("NL01INHO9501054837","Savings", accountService.generateCardUUID(), "1234", 1000.0, 600.0, 0, true, debitCard1);
-        account1.setUser(users.get(1));
+        //account1.setDebitCard(debitCard1);
+        account1.setUser(customers.get(0));
         accountRepository.save(account1);
-        Account account2 = new Account("NL01INHO2371458805", "Current", accountService.generateCardUUID(), "5678", 110.0, 950.0, 0, true, debitCard2);
-        account2.setUser(users.get(2));
+        Account account2 = new Account("NL01INHO2371458805", "Current", accountService.generateCardUUID(), "5678", 2000.0, 950.0, 0, true, debitCard2);
+        //account2.setDebitCard(debitCard2);
+        account2.setUser(customers.get(1));
         accountRepository.save(account2);
+
         Account account3 = new Account("NL01INH1234567890", "Current", accountService.generateCardUUID(), "5678", 2000.0, 950.0, -100, true, debitCard2);
-        account3.setUser(users.get(3));
+        //account2.setDebitCard(debitCard2);
+        account3.setUser(customers.get(1));
         accountRepository.save(account3);
 //        Account account3 = new Account("NL01INHO5808504708", "Savings", accountService.generateCardUUID(), "1357", 1000.0, 0.0, 5000.0, true, null);
 //        account3.setDebitCard(debitCard1);
@@ -115,13 +97,11 @@ public class MyApplicationRunner implements ApplicationRunner {
 //        account6.setUser(users.get(2));
 //        accountRepository.save(account6);
             // Create and save Transactions
-            Transaction transaction1 = new Transaction("NL67INGB1234567890", "NL67INGB213214124", 200.0, "example");
+            Transaction transaction1 = new Transaction("NL67INGB2131241242", "NL67INGB213214124", 200.0, "withdraw");
             transactionRepository.save(transaction1);
             Transaction transaction2 = new Transaction("NL67INGB12345678", "NL67INGB87654321", 155.0, "deposit");
             transactionRepository.save(transaction2);
-            Transaction transaction3 = new Transaction("NL01INHO2371458805", "NL67INGB87655555", 100.0, "regular");
+            Transaction transaction3 = new Transaction("NL67INGB12348765", "NL67INGB87655555", 100.0, "regular");
             transactionRepository.save(transaction3);
-            Transaction transaction4 = new Transaction("NL67INGB87655555", "cash", 20.0, "withdraw");
-            transactionRepository.save(transaction4);
     }
 }
